# vscode-book-r2-python

./: .gitignore  Dockerfile  README.md  pyproject.toml  rest_client_test.http
.devcontainer/: Dockerfile  devcontainer.json
domain/entity/: __init__.py  entity.py
domain/usecase/: __init__.py  operations.py  operations_test.py
memdb/: __init__.py  memdb.py  memdb_test.py
server/: api.py
